# jolt-sumchecks

./: .gitignore  README.md  pyproject.toml
docs/: index.html  openings.html  polynomials.html  resolve.html  stage1.html  stage2.html  stage3.html  stage4.html  stage5.html  stage6.html  stage7.html
site/stages/: stage1.html  stage5.html  stage6.html  stage7.html
sumcheck/: __init__.py  __main__.py  ast.py  defs.py  examples.py  format.py  html.py  latex.py  printer.py  registry.py  resolve.py  spec.py
sumcheck/examples/: __init__.py
sumcheck/examples/stage1/: __init__.py  spartan_outer.py
sumcheck/examples/stage2/: __init__.py  instruction_claim_reduction.py  product_virtualization.py  ram_output_check.py  ram_raf_evaluation.py  ram_read_write.py
sumcheck/examples/stage3/: __init__.py  instruction_input.py  registers_claim_reduction.py  shift.py
sumcheck/examples/stage4/: __init__.py  ram_val_check.py  registers_read_write.py
sumcheck/examples/stage5/: __init__.py  instruction_read_raf.py  ram_ra_claim_reduction.py  registers_val_evaluation.py
sumcheck/examples/stage6/: __init__.py  booleanity.py  bytecode_read_raf.py  inc_claim_reduction.py  instruction_ra_virtualization.py  ram_hamming_booleanity.py  ram_ra_virtualization.py
sumcheck/examples/stage7/: __init__.py  hamming_weight_claim_reduction.py
